Add transfer server and client part

--- a/Lib/Config/App.exe.config
+++ b/Lib/Config/App.exe.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="MCGS_Time" value="T"/>
-    <add key="MCGS_TimeMS" value="T"/>
+    <add key="MCGS_TimeMS" value="V"/>
     <add key="日显示01" value="V"/>
     <add key="目标温度1" value="V"/>
     <add key="平均温度显示1" value="V"/>
