--- a/AccessTransferClient/app.config
+++ b/AccessTransferClient/app.config
@@ -1,3 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="IpAddress" value="127.0.0.1"/>
+    <add key="Port" value="8888"/>
+    <add key="ClientName" value="1"/>
+    <add key="AccessMDBPath" value="" lockItem="false" />
+  </appSettings>
+  <connectionStrings>
+    <add name="AccessMDBPath" connectionString="D:\project\cui\2019-12-15D.MDB"
+      providerName="Microsoft.Jet.OLEDB.4.0" />
+  </connectionStrings>
 <startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
