--- a/AccessTransferServer/app.config
+++ b/AccessTransferServer/app.config
@@ -1,3 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+  <appSettings>
+    <add key="IpAddress" value="127.0.0.1"/>
+    <add key="Port" value="8888"/>
+  </appSettings>
+<startup>
+  <supportedRuntime version="v2.0.50727"/>
+</startup>
+</configuration>
