Add response message and timeStamp

--- a/AccessTransferClient/app.config
+++ b/AccessTransferClient/app.config
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="IpAddress" value="127.0.0.1"/>
-    <add key="Port" value="8888"/>
-    <add key="ClientName" value="1"/>
+    <add key="IpAddress" value="192.168.72.252"/>
+    <add key="Port" value="8880"/>
+    <add key="ClientName" value="TestClient"/>
+    <add key="AccessTime" value ="1900-01-01 14:00:00"/>
     <add key="AccessMDBPath" value="" lockItem="false" />
   </appSettings>
   <connectionStrings>
