Add data process and server monitor

--- a/AccessTransferClient/app.config
+++ b/AccessTransferClient/app.config
@@ -6,6 +6,317 @@
     <add key="ClientName" value="TestClient"/>
     <add key="AccessTime" value ="1900-01-01 14:00:00"/>
     <add key="AccessMDBPath" value="" lockItem="false" />
+    
+    <add key="MCGS_Time" value="T"/>
+    <add key="MCGS_TimeMS" value="V"/>
+    <add key="日显示01" value="V"/>
+    <add key="目标温度1" value="V"/>
+    <add key="平均温度显示1" value="V"/>
+    <add key="平均湿度显示1" value="V"/>
+    <add key="体感温度1" value="V"/>
+    <add key="温度显示01" value="V"/>
+    <add key="温度显示02" value="V"/>
+    <add key="温度显示03" value="V"/>
+    <add key="温度显示04" value="V"/>
+    <add key="温度显示05" value="V"/>
+    <add key="温度显示06" value="V"/>
+    <add key="日显示02" value="V"/>
+    <add key="目标温度2" value="V"/>
+    <add key="平均温度显示2" value="V"/>
+    <add key="平均湿度显示2" value="V"/>
+    <add key="体感温度2" value="V"/>
+    <add key="温度显示10" value="V"/>
+    <add key="温度显示11" value="V"/>
+    <add key="温度显示12" value="V"/>
+    <add key="温度显示13" value="V"/>
+    <add key="温度显示14" value="V"/>
+    <add key="温度显示15" value="V"/>
+    <add key="日显示03" value="V"/>
+    <add key="目标温度3" value="V"/>
+    <add key="平均温度显示3" value="V"/>
+    <add key="平均湿度显示3" value="V"/>
+    <add key="体感温度3" value="V"/>
+    <add key="温度显示19" value="V"/>
+    <add key="温度显示20" value="V"/>
+    <add key="温度显示21" value="V"/>
+    <add key="温度显示22" value="V"/>
+    <add key="温度显示23" value="V"/>
+    <add key="温度显示24" value="V"/>
+    <add key="日显示04" value="V"/>
+    <add key="目标温度4" value="V"/>
+    <add key="平均温度显示4" value="V"/>
+    <add key="平均湿度显示4" value="V"/>
+    <add key="体感温度4" value="V"/>
+    <add key="温度显示28" value="V"/>
+    <add key="温度显示29" value="V"/>
+    <add key="温度显示30" value="V"/>
+    <add key="温度显示31" value="V"/>
+    <add key="温度显示32" value="V"/>
+    <add key="温度显示33" value="V"/>
+    <add key="日显示05" value="V"/>
+    <add key="目标温度5" value="V"/>
+    <add key="平均温度显示5" value="V"/>
+    <add key="平均湿度显示5" value="V"/>
+    <add key="体感温度5" value="V"/>
+    <add key="温度显示37" value="V"/>
+    <add key="温度显示38" value="V"/>
+    <add key="温度显示39" value="V"/>
+    <add key="温度显示40" value="V"/>
+    <add key="温度显示41" value="V"/>
+    <add key="温度显示42" value="V"/>
+    <add key="日显示06" value="V"/>
+    <add key="目标温度6" value="V"/>
+    <add key="平均温度显示6" value="V"/>
+    <add key="平均湿度显示6" value="V"/>
+    <add key="体感温度6" value="V"/>
+    <add key="温度显示46" value="V"/>
+    <add key="温度显示47" value="V"/>
+    <add key="温度显示48" value="V"/>
+    <add key="温度显示49" value="V"/>
+    <add key="温度显示50" value="V"/>
+    <add key="温度显示51" value="V"/>
+    <add key="日显示07" value="V"/>
+    <add key="目标温度7" value="V"/>
+    <add key="平均温度显示7" value="V"/>
+    <add key="平均湿度显示7" value="V"/>
+    <add key="体感温度7" value="V"/>
+    <add key="温度显示55" value="V"/>
+    <add key="温度显示56" value="V"/>
+    <add key="温度显示57" value="V"/>
+    <add key="温度显示58" value="V"/>
+    <add key="温度显示59" value="V"/>
+    <add key="温度显示60" value="V"/>
+    <add key="日显示08" value="V"/>
+    <add key="目标温度8" value="V"/>
+    <add key="平均温度显示8" value="V"/>
+    <add key="平均湿度显示8" value="V"/>
+    <add key="体感温度8" value="V"/>
+    <add key="温度显示64" value="V"/>
+    <add key="温度显示65" value="V"/>
+    <add key="温度显示66" value="V"/>
+    <add key="温度显示67" value="V"/>
+    <add key="温度显示68" value="V"/>
+    <add key="温度显示69" value="V"/>
+    <add key="日显示09" value="V"/>
+    <add key="目标温度9" value="V"/>
+    <add key="平均温度显示9" value="V"/>
+    <add key="平均湿度显示9" value="V"/>
+    <add key="体感温度9" value="V"/>
+    <add key="温度显示73" value="V"/>
+    <add key="温度显示74" value="V"/>
+    <add key="温度显示75" value="V"/>
+    <add key="温度显示76" value="V"/>
+    <add key="温度显示77" value="V"/>
+    <add key="温度显示78" value="V"/>
+    <add key="时控风机循环周期1" value="V"/>
+    <add key="时控风机循环周期2" value="V"/>
+    <add key="时控风机循环周期3" value="V"/>
+    <add key="时控风机循环周期4" value="V"/>
+    <add key="时控风机循环周期5" value="V"/>
+    <add key="时控风机循环周期6" value="V"/>
+    <add key="时控风机循环周期7" value="V"/>
+    <add key="时控风机循环周期8" value="V"/>
+    <add key="时控风机循环周期9" value="V"/>
+    <add key="室外温度" value="V"/>
+    <add key="运行时间1" value="V"/>
+    <add key="运行时间2" value="V"/>
+    <add key="运行时间3" value="V"/>
+    <add key="运行时间4" value="V"/>
+    <add key="运行时间5" value="V"/>
+    <add key="运行时间6" value="V"/>
+    <add key="运行时间7" value="V"/>
+    <add key="运行时间8" value="V"/>
+    <add key="运行时间9" value="V"/>
+    <add key="停止时间1" value="V"/>
+    <add key="停止时间2" value="V"/>
+    <add key="停止时间3" value="V"/>
+    <add key="停止时间4" value="V"/>
+    <add key="停止时间5" value="V"/>
+    <add key="停止时间6" value="V"/>
+    <add key="停止时间7" value="V"/>
+    <add key="停止时间8" value="V"/>
+    <add key="停止时间9" value="V"/>
+    <add key="风机台数1" value="V"/>
+    <add key="风机台数2" value="V"/>
+    <add key="风机台数3" value="V"/>
+    <add key="风机台数4" value="V"/>
+    <add key="风机台数5" value="V"/>
+    <add key="风机台数6" value="V"/>
+    <add key="风机台数7" value="V"/>
+    <add key="风机台数8" value="V"/>
+    <add key="风机台数9" value="V"/>
+    <add key="负压存盘01" value="V"/>
+    <add key="负压存盘02" value="V"/>
+    <add key="负压存盘03" value="V"/>
+    <add key="负压存盘04" value="V"/>
+    <add key="负压存盘05" value="V"/>
+    <add key="负压存盘06" value="V"/>
+    <add key="负压存盘07" value="V"/>
+    <add key="负压存盘08" value="V"/>
+    <add key="负压存盘09" value="V"/>
+    <add key="场名" value="S"/>
+    <add key="CO201" value="V"/>
+    <add key="CO202" value="V"/>
+    <add key="CO203" value="V"/>
+    <add key="CO204" value="V"/>
+    <add key="CO205" value="V"/>
+    <add key="CO206" value="V"/>
+    <add key="CO207" value="V"/>
+    <add key="CO208" value="V"/>
+    <add key="CO209" value="V"/>
+    <add key="CO210" value="V"/>
+    <add key="CO211" value="V"/>
+    <add key="CO212" value="V"/>
+    <add key="负压显示1" value="V"/>
+    <add key="负压显示2" value="V"/>
+    <add key="负压显示3" value="V"/>
+    <add key="负压显示4" value="V"/>
+    <add key="负压显示5" value="V"/>
+    <add key="负压显示6" value="V"/>
+    <add key="负压显示7" value="V"/>
+    <add key="负压显示8" value="V"/>
+    <add key="负压显示9" value="V"/>
+    <add key="负压显示10" value="V"/>
+    <add key="负压显示11" value="V"/>
+    <add key="负压显示12" value="V"/>
+    <add key="料量曲线01" value="V"/>
+    <add key="料量曲线02" value="V"/>
+    <add key="料量曲线03" value="V"/>
+    <add key="料量曲线04" value="V"/>
+    <add key="料量曲线05" value="V"/>
+    <add key="料量曲线06" value="V"/>
+    <add key="料量曲线07" value="V"/>
+    <add key="料量曲线08" value="V"/>
+    <add key="料量曲线09" value="V"/>
+    <add key="料量曲线10" value="V"/>
+    <add key="料量曲线11" value="V"/>
+    <add key="料量曲线12" value="V"/>
+    <add key="打料累计分钟1" value="V"/>
+    <add key="打料累计分钟2" value="V"/>
+    <add key="打料累计分钟3" value="V"/>
+    <add key="打料累计分钟4" value="V"/>
+    <add key="打料累计分钟5" value="V"/>
+    <add key="打料累计分钟6" value="V"/>
+    <add key="打料累计分钟7" value="V"/>
+    <add key="打料累计分钟8" value="V"/>
+    <add key="打料累计分钟9" value="V"/>
+    <add key="打料累计分钟10" value="V"/>
+    <add key="打料累计分钟11" value="V"/>
+    <add key="打料累计分钟12" value="V"/>
+    <add key="断续控制手自动01" value="V"/>
+    <add key="断续控制手自动02" value="V"/>
+    <add key="断续控制手自动03" value="V"/>
+    <add key="断续控制手自动04" value="V"/>
+    <add key="断续控制手自动05" value="V"/>
+    <add key="断续控制手自动06" value="V"/>
+    <add key="断续控制手自动07" value="V"/>
+    <add key="断续控制手自动08" value="V"/>
+    <add key="断续控制手自动09" value="V"/>
+    <add key="断续控制手自动10" value="V"/>
+    <add key="断续控制手自动11" value="V"/>
+    <add key="断续控制手自动12" value="V"/>
+    <add key="小窗提前开启时间01" value="V"/>
+    <add key="小窗提前开启时间02" value="V"/>
+    <add key="小窗提前开启时间03" value="V"/>
+    <add key="小窗提前开启时间04" value="V"/>
+    <add key="小窗提前开启时间05" value="V"/>
+    <add key="小窗提前开启时间06" value="V"/>
+    <add key="小窗提前开启时间07" value="V"/>
+    <add key="小窗提前开启时间08" value="V"/>
+    <add key="小窗提前开启时间09" value="V"/>
+    <add key="小窗提前开启时间10" value="V"/>
+    <add key="小窗提前开启时间11" value="V"/>
+    <add key="小窗提前开启时间12" value="V"/>
+    <add key="只数1" value="V"/>
+    <add key="只数2" value="V"/>
+    <add key="只数3" value="V"/>
+    <add key="只数4" value="V"/>
+    <add key="只数5" value="V"/>
+    <add key="只数6" value="V"/>
+    <add key="只数7" value="V"/>
+    <add key="只数8" value="V"/>
+    <add key="只数9" value="V"/>
+    <add key="只数10" value="V"/>
+    <add key="只数11" value="V"/>
+    <add key="只数12" value="V"/>
+    <add key="低湿补偿系数01" value="V"/>
+    <add key="低湿补偿系数02" value="V"/>
+    <add key="低湿补偿系数03" value="V"/>
+    <add key="低湿补偿系数04" value="V"/>
+    <add key="低湿补偿系数05" value="V"/>
+    <add key="低湿补偿系数06" value="V"/>
+    <add key="低湿补偿系数07" value="V"/>
+    <add key="低湿补偿系数08" value="V"/>
+    <add key="低湿补偿系数09" value="V"/>
+    <add key="风机效率01" value="V"/>
+    <add key="风机效率02" value="V"/>
+    <add key="风机效率03" value="V"/>
+    <add key="风机效率04" value="V"/>
+    <add key="风机效率05" value="V"/>
+    <add key="风机效率06" value="V"/>
+    <add key="风机效率07" value="V"/>
+    <add key="风机效率08" value="V"/>
+    <add key="风机效率09" value="V"/>
+    <add key="报警信号01" value="V"/>
+    <add key="报警信号02" value="V"/>
+    <add key="报警信号03" value="V"/>
+    <add key="报警信号04" value="V"/>
+    <add key="报警信号05" value="V"/>
+    <add key="报警信号06" value="V"/>
+    <add key="报警信号07" value="V"/>
+    <add key="报警信号08" value="V"/>
+    <add key="报警信号09" value="V"/>
+    <add key="报警信号10" value="V"/>
+    <add key="报警信号11" value="V"/>
+    <add key="报警信号12" value="V"/>
+    <add key="报警信号13" value="V"/>
+    <add key="报警信号14" value="V"/>
+    <add key="报警信号15" value="V"/>
+    <add key="报警信号16" value="V"/>
+    <add key="报警信号17" value="V"/>
+    <add key="报警信号18" value="V"/>
+    <add key="报警信号19" value="V"/>
+    <add key="报警信号20" value="V"/>
+    <add key="报警信号21" value="V"/>
+    <add key="报警信号22" value="V"/>
+    <add key="报警信号23" value="V"/>
+    <add key="报警信号24" value="V"/>
+    <add key="报警信号25" value="V"/>
+    <add key="报警信号26" value="V"/>
+    <add key="报警信号27" value="V"/>
+    <add key="报警信号28" value="V"/>
+    <add key="报警信号29" value="V"/>
+    <add key="报警信号30" value="V"/>
+    <add key="报警信号31" value="V"/>
+    <add key="报警信号32" value="V"/>
+    <add key="报警信号33" value="V"/>
+    <add key="报警信号34" value="V"/>
+    <add key="报警信号35" value="V"/>
+    <add key="报警信号36" value="V"/>
+    <add key="断续控制手自动01" value="V"/>
+    <add key="断续控制手自动02" value="V"/>
+    <add key="断续控制手自动03" value="V"/>
+    <add key="断续控制手自动04" value="V"/>
+    <add key="断续控制手自动05" value="V"/>
+    <add key="断续控制手自动06" value="V"/>
+    <add key="断续控制手自动07" value="V"/>
+    <add key="断续控制手自动08" value="V"/>
+    <add key="断续控制手自动09" value="V"/>
+    <add key="断续控制手自动10" value="V"/>
+    <add key="断续控制手自动11" value="V"/>
+    <add key="断续控制手自动12" value="V"/>
+    <add key="手自动1" value="V"/>
+    <add key="手自动2" value="V"/>
+    <add key="手自动3" value="V"/>
+    <add key="手自动4" value="V"/>
+    <add key="手自动5" value="V"/>
+    <add key="手自动6" value="V"/>
+    <add key="手自动7" value="V"/>
+    <add key="手自动8" value="V"/>
+    <add key="手自动9" value="V"/>
+    <add key="手自动10" value="V"/>
+    <add key="手自动11" value="V"/>
+    <add key="手自动12" value="V"/>
   </appSettings>
   <connectionStrings>
     <add name="AccessMDBPath" connectionString="D:\project\cui\2019-12-15D.MDB"
