Optimize all database connection part to single model add client side refresh connection state add server side database configuration part

--- a/AccessTransferClient/app.config
+++ b/AccessTransferClient/app.config
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="IpAddress" value="192.168.72.252"/>
-    <add key="Port" value="8880"/>
+    <add key="IpAddress" value="127.0.0.1"/>
+    <add key="Port" value="8800"/>
     <add key="ClientName" value="TestClient"/>
     <add key="AccessTime" value ="1900-01-01 14:00:00"/>
     <add key="AccessMDBPath" value="" lockItem="false" />
+    <add key="ProcessPattern" value="1"/>
+    <add key="PickInterval" value ="50"/>
     
     <add key="MCGS_Time" value="T"/>
     <add key="MCGS_TimeMS" value="V"/>
@@ -318,7 +320,7 @@
     <add key="手自动11" value="V"/>
     <add key="手自动12" value="V"/>
   </appSettings>
-  <connectionStrings>
+    <connectionStrings>
     <add name="AccessMDBPath" connectionString="D:\project\cui\2019-12-15D.MDB"
       providerName="Microsoft.Jet.OLEDB.4.0" />
   </connectionStrings>
