--- a/AccessTransferServer/app.config
+++ b/AccessTransferServer/app.config
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="IpAddress" value="192.168.72.252"/>
-    <add key="Port" value="8880"/>
+    <add key="IpAddress" value="127.0.0.1"/>
+    <add key="Port" value="8800"/>
   </appSettings>
+  <connectionStrings>
+    <add name="SqlServerPath" connectionString="Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"/>
+  </connectionStrings>
 <startup>
   <supportedRuntime version="v2.0.50727"/>
 </startup>
