--- a/AccessTransferServer/AccessTransferServer.csproj
+++ b/AccessTransferServer/AccessTransferServer.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
@@ -49,6 +50,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlServerConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SqlServerConfig.Designer.cs">
+      <DependentUpon>SqlServerConfig.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -61,6 +68,9 @@
     </Compile>
     <EmbeddedResource Include="Receiver.resx">
       <DependentUpon>Receiver.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SqlServerConfig.resx">
+      <DependentUpon>SqlServerConfig.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
