Fix timeStamp to record time Fix ServerConnected state change time

--- a/AccessTransferClient/app.config
+++ b/AccessTransferClient/app.config
@@ -4,7 +4,8 @@
     <add key="IpAddress" value="127.0.0.1"/>
     <add key="Port" value="8800"/>
     <add key="ClientName" value="TestClient"/>
-    <add key="AccessTime" value ="1900-01-01 14:00:00"/>
+    <add key="OnOffRecordTime" value ="1900-01-01 14:00:00"/>
+    <add key="TmpAndMoistTime" value ="1900-01-01 14:00:00"/>
     <add key="AccessMDBPath" value="" lockItem="false" />
     <add key="ProcessPattern" value="1"/>
     <add key="PickInterval" value ="50"/>
